impl: access secrets manage for photos adn collections
